# bot-knows

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bot_knows_developer_implementation_guide.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
scripts/: e2e_test.py  migrate_graph_remove_chat_node.py  test_interface.py
src/bot_knows/: __init__.py  config.py  logging.py  orchestrator.py
src/bot_knows/domain/: __init__.py  chat.py  message.py  relation.py  topic.py  topic_evidence.py
src/bot_knows/importers/: __init__.py  base.py  chatgpt.py  claude.py  generic_json.py  registry.py
src/bot_knows/infra/: __init__.py
src/bot_knows/infra/llm/: __init__.py  anthropic_provider.py  openai_provider.py
src/bot_knows/infra/mongo/: __init__.py  client.py  repositories.py
src/bot_knows/infra/neo4j/: __init__.py  client.py  graph_repository.py
src/bot_knows/infra/redis/: __init__.py  cache.py  client.py
src/bot_knows/interfaces/: __init__.py  embedding.py  graph.py  llm.py  recall.py  storage.py
src/bot_knows/models/: __init__.py  chat.py  ingest.py  message.py  recall.py  topic.py
src/bot_knows/services/: __init__.py  chat_processing.py  dedup_service.py  graph_service.py  message_builder.py  recall_service.py  tasks.py  topic_extraction.py
src/bot_knows/utils/: __init__.py  hashing.py  lazy_import.py
tests/: __init__.py  conftest.py
tests/fixtures/: chatgpt_export.json  claude_export.json
tests/integration/: __init__.py  test_pipeline.py
tests/mocks/: mock_embedding.py  mock_mongo.py  mock_neo4j.py
tests/unit/: __init__.py  test_importers.py  test_models.py  test_orchestrator.py  test_services.py
