[project]
name = "bot-knows"
version = "0.1.1"
description = "Framework-agnostic Python library for graph-backed personal knowledge bases from chat data"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["knowledge-base", "chat", "graph", "nlp", "embedding", "recall", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",

    # Async
    "anyio>=4.7,<5.0",

    # Utilities
    "structlog>=25.1,<26.0",
    "numpy>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "hypothesis>=6.100,<7.0",
    "mypy>=1.14,<2.0",
    "ruff>=0.9,<1.0",
    "mongomock-motor>=0.0.32",
    "pre-commit>=4.0,<5.0",
]
 # Infrastructure
mongo = ["motor>=3.6,<4.0",]

neo4j = ["neo4j>=5.27,<6.0",]

redis = ["redis>=5.2,<6.0",]

# Task Queue
taskiq = [
    "taskiq>=0.11,<1.0",
    "taskiq-redis>=1.0,<2.0",]

# LLM Providers
openai = ["openai>=1.59,<2.0",]

anthropic = ["anthropic>=0.42,<1.0",]

[project.urls]
Homepage = "https://github.com/Snezhana/bot-knows"
Documentation = "https://github.com/Snezhana/bot-knows#readme"
Repository = "https://github.com/Snezhana/bot-knows"
Issues = "https://github.com/Snezhana/bot-knows/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_knows"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "hypothesis>=6.100,<7.0",
    "mypy>=1.14,<2.0",
    "ruff>=0.9,<1.0",
    "mongomock-motor>=0.0.32",
    "pre-commit>=4.0,<5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["bot_knows"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "neo4j.*",
    "redis.*",
    "taskiq.*",
    "taskiq_redis.*",
    "mongomock_motor.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/bot_knows"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
]
show_missing = true
